covis, lightfm features

--- a/notebooks/inference.ipynb
+++ b/notebooks/inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# fav serials + lightFM tuned"
+    "# fav serials + lightFM"
    ]
   },
   {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,18 +296,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if user_top_5_serials.get(user_id):\n",
-    "    print(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2052,8 +2044,153 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# covis"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from operator import itemgetter "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_hist_df_covis = user_hist_df[['user_id', 'movie_id']].drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_hist = user_hist_df_covis.groupby('user_id')['movie_id'].apply(set).to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covis = {}\n",
+    "\n",
+    "for user in user_hist:\n",
+    "    curr_user_hist = user_hist[user]\n",
+    "    for film in curr_user_hist:\n",
+    "        if covis.get(film):\n",
+    "            for other in curr_user_hist:\n",
+    "                if other == film:\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    if covis[film].get(other):\n",
+    "                        covis[film][other] += 1\n",
+    "                    else:\n",
+    "                        covis[film][other] = 1\n",
+    "        else:\n",
+    "            covis[film] = {}\n",
+    "            for other in curr_user_hist:\n",
+    "                if other == film:\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    if covis[film].get(other):\n",
+    "                        covis[film][other] += 1\n",
+    "                    else:\n",
+    "                        covis[film][other] = 1\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covis_old = covis.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for film in covis:\n",
+    "    covis[film] = dict(sorted(covis[film].items(), key = itemgetter(1), reverse = True)[:30]) \n",
+    "    total = sum(covis[film].values())\n",
+    "    for f in covis[film]:\n",
+    "        covis[film][f]/=total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pred_for_user(covis, user_hist, user, N):\n",
+    "    recoms = {}\n",
+    "    for film in user_hist[user]:\n",
+    "        cov = covis[film]\n",
+    "        for rec in cov:\n",
+    "            if recoms.get(rec):\n",
+    "                recoms[rec] += covis[film][rec]\n",
+    "            else:\n",
+    "                recoms[rec] = covis[film][rec]\n",
+    "    N_2 = N + 50\n",
+    "    res = dict(sorted(recoms.items(), key = itemgetter(1), reverse = True)[:N_2]) \n",
+    "    \n",
+    "    res_f = list(set(res.keys()).difference(user_hist[user]))[:N]\n",
+    "    return res_f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1264, user_id      11254796898083103047\n",
+      " movie_id               0 0 0 0 0\n",
+      "Name: 1264, dtype: object)\n"
+     ]
+    }
+   ],
+   "source": [
+    "predict = sbmt.copy()\n",
+    "predict = predict.drop(' movie_id', 1)\n",
+    "\n",
+    "for ind, user in enumerate(sbmt.iterrows()):\n",
+    "    #print(user[1]['user_id'])\n",
+    "    \n",
+    "    pred = pred_for_user(covis, user_hist, user[1]['user_id'], 5)\n",
+    "    if len(pred)<5:\n",
+    "        addit = 5 - len(pred)\n",
+    "        pred += most_pop[:addit]\n",
+    "        print(user)\n",
+    "    pred = ' '.join([str(i) for i in pred])\n",
+    "    \n",
+    "    predict.loc[ind, 'movie_id'] = pred\n",
+    "    \n",
+    "predict.to_csv('../data/submits/covis.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2085,27 +2222,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>16975709365084587137</td>\n",
-       "      <td>17729 18943 18308 7347 18311</td>\n",
+       "      <td>18308 19207 18311 8973 11279</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10225505309438393880</td>\n",
-       "      <td>17079 13122 17850 3506 13950</td>\n",
+       "      <td>18308 19207 18311 8973 18576</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>337894458057354820</td>\n",
-       "      <td>16676 16830 17186 16829 17999</td>\n",
+       "      <td>18308 19207 18311 8973 11279</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>16389753737490268206</td>\n",
-       "      <td>17909 19954 19279 18548 18423</td>\n",
+       "      <td>18308 15368 8973 18448 18705</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>12377183607123393787</td>\n",
-       "      <td>18943 18308 7347 18311 17756</td>\n",
+       "      <td>18308 19207 18311 8973 11279</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2115,27 +2252,27 @@
        "    <tr>\n",
        "      <th>1690</th>\n",
        "      <td>16073255054457636768</td>\n",
-       "      <td>16757 12497 18308 17756 17239</td>\n",
+       "      <td>15489 18308 10630 19207 4624</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1691</th>\n",
        "      <td>18217982949448186449</td>\n",
-       "      <td>18080 18526 18652 17014 19287</td>\n",
+       "      <td>10630 19207 8973 11279 4624</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1692</th>\n",
        "      <td>8493046014808115881</td>\n",
-       "      <td>18943 7347 17756 17239 17014</td>\n",
+       "      <td>19335 11279 18705 17041 18968</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1693</th>\n",
        "      <td>6524731807859816855</td>\n",
-       "      <td>18943 7347 17756 17239 17014</td>\n",
+       "      <td>15489 19335 19207 8973 4624</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1694</th>\n",
        "      <td>17611799088817908833</td>\n",
-       "      <td>7347 18311 18080 18526 18576</td>\n",
+       "      <td>19207 18311 8973 11279 18576</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2144,22 +2281,22 @@
       ],
       "text/plain": [
        "                   user_id                       movie_id\n",
-       "0     16975709365084587137   17729 18943 18308 7347 18311\n",
-       "1     10225505309438393880   17079 13122 17850 3506 13950\n",
-       "2       337894458057354820  16676 16830 17186 16829 17999\n",
-       "3     16389753737490268206  17909 19954 19279 18548 18423\n",
-       "4     12377183607123393787   18943 18308 7347 18311 17756\n",
+       "0     16975709365084587137   18308 19207 18311 8973 11279\n",
+       "1     10225505309438393880   18308 19207 18311 8973 18576\n",
+       "2       337894458057354820   18308 19207 18311 8973 11279\n",
+       "3     16389753737490268206   18308 15368 8973 18448 18705\n",
+       "4     12377183607123393787   18308 19207 18311 8973 11279\n",
        "...                    ...                            ...\n",
-       "1690  16073255054457636768  16757 12497 18308 17756 17239\n",
-       "1691  18217982949448186449  18080 18526 18652 17014 19287\n",
-       "1692   8493046014808115881   18943 7347 17756 17239 17014\n",
-       "1693   6524731807859816855   18943 7347 17756 17239 17014\n",
-       "1694  17611799088817908833   7347 18311 18080 18526 18576\n",
+       "1690  16073255054457636768   15489 18308 10630 19207 4624\n",
+       "1691  18217982949448186449    10630 19207 8973 11279 4624\n",
+       "1692   8493046014808115881  19335 11279 18705 17041 18968\n",
+       "1693   6524731807859816855    15489 19335 19207 8973 4624\n",
+       "1694  17611799088817908833   19207 18311 8973 11279 18576\n",
        "\n",
        "[1695 rows x 2 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2169,11 +2306,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# fav + covis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "predict = sbmt.copy()\n",
+    "predict = predict.drop(' movie_id', 1)\n",
+    "\n",
+    "for ind, user in enumerate(sbmt.iterrows()):\n",
+    "    \n",
+    "    user_id = user[1]['user_id']\n",
+    "    #print(user[1]['user_id'])\n",
+    "    \n",
+    "    \n",
+    "    if user_top_5_serials.get(user_id):\n",
+    "    \n",
+    "        pref_serials = user_top_5_serials[user_id]\n",
+    "        num_of_serials = len(pref_serials)\n",
+    "\n",
+    "        if num_of_serials < 5:\n",
+    "            additional = 5 - num_of_serials\n",
+    "            covis_pred = pred_for_user(covis, user_hist, user_id, additional)\n",
+    "\n",
+    "            pred = pref_serials + covis_pred\n",
+    "            \n",
+    "        else:\n",
+    "            pred = pref_serials\n",
+    "    else:\n",
+    "         pred = pred_for_user(covis, user_hist, user_id, 5)\n",
+    "            \n",
+    "    pred = ' '.join([str(i) for i in pred])\n",
+    "    \n",
+    "    predict.loc[ind, 'movie_id'] = pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict.to_csv('../data/submits/fav_serial_covis.csv', index = False)"
+   ]
   }
  ],
  "metadata": {
