--- a/notebooks/validate_model.ipynb
+++ b/notebooks/validate_model.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,21 +227,21 @@
     "\n",
     "g = fav_serials.groupby([\"user_id\"]).apply(lambda x: x.sort_values([\"cnt\"], ascending = False)).reset_index(drop=True)\n",
     "\n",
-    "user_top_5_serials = g.groupby([\"user_id\"])['movie_id'].apply(lambda x: list(x[:5])).to_dict()"
+    "user_top_5_serials = g.groupby([\"user_id\"])['movie_id'].apply(lambda x: list(x[:5])).to_dict()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.027612341772151897"
+       "0.011995780590717299"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,6 +252,12 @@
     "for user in correct_1.keys():\n",
     "    try:\n",
     "        preds[user] = user_top_5_serials[user]\n",
+    "        if len(preds[user]) < 5:\n",
+    "            \n",
+    "            excluded_set = set(most_popular_100).difference(set(preds[user]))\n",
+    "            additional = 5 - len(preds[user])\n",
+    "            additional_pred = random.sample(list(excluded_set), additional)\n",
+    "            preds[user] += additional_pred\n",
     "    except KeyError:\n",
     "        preds[user] = random.sample(most_popular_100, 5)\n",
     "    \n",
@@ -260,16 +266,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0037106188466947965"
+       "0.003827004219409283"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,6 +286,12 @@
     "for user in correct_2.keys():\n",
     "    try:\n",
     "        preds[user] = user_top_5_serials[user]\n",
+    "        if len(preds[user]) < 5:\n",
+    "            \n",
+    "            excluded_set = set(most_popular_100).difference(set(preds[user]))\n",
+    "            additional = 5 - len(preds[user])\n",
+    "            additional_pred = random.sample(list(excluded_set), additional)\n",
+    "            preds[user] += additional_pred\n",
     "    except KeyError:\n",
     "        preds[user] = random.sample(most_popular_100, 5)\n",
     "    \n",
@@ -291,6 +303,257 @@
    "metadata": {},
    "source": [
     "норм тема брать любимые сериалы из предыдущего месяца"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# fav + lightFM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "PATH = '/Users/danil/Documents/github/sweet_RS/'\n",
+    "sys.path.append(str(PATH))\n",
+    "from src.utils import read_pickle, save_to_pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#lfm_preds = read_pickle('../data/processed/light_fm_tuned_validate.pickle')\n",
+    "lfm_preds = read_pickle('../data/processed/light_fm_validate.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = dict()\n",
+    "\n",
+    "for user in correct_1.keys():\n",
+    "    try:\n",
+    "        preds[user] = user_top_5_serials[user]\n",
+    "        if len(preds[user]) < 5:\n",
+    "            \n",
+    "            try:\n",
+    "                additional_pred = lfm_preds[user]\n",
+    "            except:\n",
+    "                additional_pred = most_popular_100\n",
+    "                \n",
+    "            excluded_set = set(additional_pred).difference(set(preds[user]))\n",
+    "            additional = 5 - len(preds[user])\n",
+    "            additional_pred = random.sample(list(excluded_set), additional)\n",
+    "            preds[user] += additional_pred\n",
+    "    except KeyError:\n",
+    "        preds[user] = random.sample(most_popular_100, 5)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "on `light_fm_validate`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.012529535864978906"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.mapk(list(preds.values()), list(correct_1.values()), 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004848293299620733"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.mapk(list(preds.values()), list(correct_2.values()), 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "on `light_fm_tuned_validate`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.01188396624472574"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.mapk(list(preds.values()), list(correct_1.values()), 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004614412136536031"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.mapk(list(preds.values()), list(correct_2.values()), 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "вобщем lightFM немного лучше рандома и лучше не тюненый"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_to_pickle(preds, '../data/processed/errors_check_preds.pickle')\n",
+    "save_to_pickle(correct_1, '../data/processed/errors_check_corrs.pickle')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1386"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(missed_users)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(best_users)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "155"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(norm_users)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in "
    ]
   },
   {
