--- a/notebooks/lightFM.ipynb
+++ b/notebooks/lightFM.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/danil/Documents/github/sweet_RS/env/lib/python3.7/site-packages/lightfm/_lightfm_fast.py:9: UserWarning: LightFM was compiled without OpenMP support. Only a single thread will be used.\n",
+      "  warnings.warn('LightFM was compiled without OpenMP support. '\n"
+     ]
+    }
+   ],
    "source": [
     "from lightfm import LightFM\n",
     "from scipy.sparse import coo_matrix\n",
@@ -15,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +72,7 @@
        "(184263, 6)"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +102,7 @@
        "(184263, 6)"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,16 +129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LightFM(no_components = 10)"
+    "model = LightFM(loss='logistic', no_components=10, random_state = 42)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +167,7 @@
        "(2055, 4063)"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +220,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "792\n"
+     ]
+    }
+   ],
+   "source": [
+    "movies_database = pd.read_csv('../data/raw/movies.csv')\n",
+    "new_movies = movies_database[(movies_database['year']>= 2010) & \n",
+    "                             (movies_database['id'].isin(list(item_encode.keys()))) &\n",
+    "                             (movies_database['imdb_rating']>= 6)]['id'].values\n",
+    "\n",
+    "moveis_views = train_df[train_df['movie_id'].isin([item_encode[x] for x in new_movies])]['movie_id'].value_counts()\n",
+    "\n",
+    "items_to_recom = moveis_views[moveis_views>20].index\n",
+    "print(len(items_to_recom))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -231,26 +265,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "users_to_predict = [user_encode[x] for x in list(sbmt['user_id'])]\n",
-    "items_to_predict = [item_encode[x] for x in items_to_recom]"
+    "#items_to_predict = [item_encode[x] for x in items_to_recom]\n",
+    "items_to_predict = items_to_recom"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<lightfm.lightfm.LightFM at 0x125148190>"
+       "<lightfm.lightfm.LightFM at 0x111aa7b50>"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,11 +347,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_to_pickle(recoms, '../data/processed/light_fm_tuned_validate.pickle')"
+    "save_to_pickle(recoms, '../data/processed/light_fm_new_idbm.pickle')"
    ]
   },
   {
@@ -328,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,52 +429,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LightFM(item_alpha = 0.1, no_components=10)\n",
+    "model = LightFM(loss='logistic', no_components=10, random_state = 42)\n",
     "\n",
     "train_df = train[['user_id', 'movie_id', 'event']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "user_encode = {u: i for i, u in enumerate(train['user_id'].unique())}\n",
-    "item_encode = {u: i for i, u in enumerate(train['movie_id'].unique())}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 222,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "item_encode = {u: i for i, u in enumerate(train['movie_id'].unique())}\n",
+    "\n",
     "user_decode = {v: k for k, v in user_encode.items()}\n",
-    "item_decode = {v: k for k, v in item_encode.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 223,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2055, 4063)"
-      ]
-     },
-     "execution_count": 223,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "item_decode = {v: k for k, v in item_encode.items()}\n",
+    "\n",
     "n_users, n_items = len(user_encode), len(item_encode)\n",
     "\n",
     "n_users, n_items"
@@ -447,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +477,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "295\n"
+     ]
+    }
+   ],
+   "source": [
+    "movies_database = pd.read_csv('../data/raw/movies.csv')\n",
+    "new_movies = movies_database[(movies_database['year']>= 2010) & \n",
+    "                             (movies_database['id'].isin(list(item_encode.keys()))) &\n",
+    "                             (movies_database['imdb_rating']>= 6)]['id'].values\n",
+    "\n",
+    "moveis_views = train[train['movie_id'].isin([item_encode[x] for x in new_movies])]['movie_id'].value_counts()\n",
+    "\n",
+    "items_to_recom = moveis_views[moveis_views>100].index\n",
+    "print(len(items_to_recom))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,25 +532,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = LightFM(item_alpha = 0.2, no_components=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<lightfm.lightfm.LightFM at 0x124b327d0>"
+       "<lightfm.lightfm.LightFM at 0x116a28210>"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,16 +609,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0019391965255157438"
+       "0.009548317046688381"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,41 +641,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 251,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.007202531645569621"
-      ]
-     },
-     "execution_count": 251,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "recoms = {}\n",
-    "num_to_recom = 5\n",
-    "for user in users_to_predict:\n",
-    "    #print(user)\n",
-    "    items_to_score = list(items_to_predict.difference(user_hist[user]))\n",
-    "    #print(len(items_to_score))\n",
-    "    predict = model.predict(user, items_to_score, num_threads=-1)\n",
-    "    top_recoms_id = sorted(range(len(predict)),\n",
-    "                           key=lambda i: predict[i])[-num_to_recom:]\n",
-    "    top_recoms_id.reverse()\n",
-    "    recoms[user_decode[user]] = [item_decode[items_to_score[i]]\n",
-    "                                 for i in top_recoms_id]\n",
-    "\n",
-    "metrics.mapk(list(recoms.values()), list(correct_1.values()), 5)"
+    "0.009470141150922911"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,16 +677,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.007573839662447258"
+       "0.009548317046688381"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
