--- a/notebooks/inference.ipynb
+++ b/notebooks/inference.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
     "\n",
     "fav_serials = user_hist_df[(user_hist_df['episode_id'] != 0) & \n",
     "                           (user_hist_df['month'] == 7)].groupby(['user_id', 'movie_id'])['movie_id'].count()\n",
-    "fav_serials = fav_serials[fav_serials>=2].reset_index(name='cnt')\n",
+    "fav_serials = fav_serials[fav_serials>=3].reset_index(name='cnt')\n",
     "\n",
     "g = fav_serials.groupby([\"user_id\"]).apply(lambda x: x.sort_values([\"cnt\"], ascending = False)).reset_index(drop=True)\n",
     "\n",
@@ -615,24 +615,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "load best lightFM"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds = read_pickle('../data/processed/als.pickle')"
+    "preds = read_pickle('../data/processed/als_2.pickle')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +640,7 @@
     "    \n",
     "    if user_top_5_serials.get(user_id):\n",
     "    \n",
-    "        pref_serials = user_top_5_serials[user_id][:3]\n",
+    "        pref_serials = user_top_5_serials[user_id][:]\n",
     "        num_of_serials = len(pref_serials)\n",
     "\n",
     "        if num_of_serials < 5:\n",
@@ -665,7 +658,7 @@
     "    \n",
     "    predict.loc[ind, 'movie_id'] = pred\n",
     "    \n",
-    "predict.to_csv('../data/submits/fav_serials_3_als.csv', index = False)"
+    "predict.to_csv('../data/submits/fav_serials_3_als_2.csv', index = False)"
    ]
   },
   {
@@ -694,6 +687,449 @@
     "    predict.loc[ind, 'movie_id'] = pred\n",
     "    \n",
     "predict.to_csv('../data/submits/lmf.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# fav serial + item simil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = read_pickle('../data/processed/item_simil_10.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict = sbmt.copy()\n",
+    "predict = predict.drop(' movie_id', 1)\n",
+    "\n",
+    "for ind, user in enumerate(sbmt.iterrows()):\n",
+    "    \n",
+    "    user_id = user[1]['user_id']\n",
+    "    #print(user[1]['user_id'])\n",
+    "    \n",
+    "    \n",
+    "    if user_top_5_serials.get(user_id):\n",
+    "    \n",
+    "        pref_serials = user_top_5_serials[user_id][:]\n",
+    "        num_of_serials = len(pref_serials)\n",
+    "\n",
+    "        if num_of_serials < 5:\n",
+    "            additional = 5 - num_of_serials\n",
+    "            light_fm_pred = preds[user_id][:additional]\n",
+    "\n",
+    "            pred = pref_serials + light_fm_pred\n",
+    "            \n",
+    "        else:\n",
+    "            pred = pref_serials\n",
+    "    else:\n",
+    "         pred = preds[user_id][:5]\n",
+    "            \n",
+    "    pred = ' '.join([str(i) for i in pred])\n",
+    "    \n",
+    "    predict.loc[ind, 'movie_id'] = pred\n",
+    "    \n",
+    "predict.to_csv('../data/submits/fav_serials_item_simil.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>movie_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16975709365084587137</td>\n",
+       "      <td>17729 18262 18611 18507 18964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10225505309438393880</td>\n",
+       "      <td>17079 13122 17850 3506 13950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>337894458057354820</td>\n",
+       "      <td>16676 16830 17186 16829 17999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16389753737490268206</td>\n",
+       "      <td>17909 19954 19279 18548 18423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12377183607123393787</td>\n",
+       "      <td>18652 18308 18520 18153 18413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1690</th>\n",
+       "      <td>16073255054457636768</td>\n",
+       "      <td>16757 18534 7351 17966 13378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1691</th>\n",
+       "      <td>18217982949448186449</td>\n",
+       "      <td>18534 17966 7347 17756 13378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1692</th>\n",
+       "      <td>8493046014808115881</td>\n",
+       "      <td>18652 18413 18520 9311 18807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1693</th>\n",
+       "      <td>6524731807859816855</td>\n",
+       "      <td>18520 18413 18652 9311 18153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1694</th>\n",
+       "      <td>17611799088817908833</td>\n",
+       "      <td>18534 7347 10584 17966 7351</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1695 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   user_id                       movie_id\n",
+       "0     16975709365084587137  17729 18262 18611 18507 18964\n",
+       "1     10225505309438393880   17079 13122 17850 3506 13950\n",
+       "2       337894458057354820  16676 16830 17186 16829 17999\n",
+       "3     16389753737490268206  17909 19954 19279 18548 18423\n",
+       "4     12377183607123393787  18652 18308 18520 18153 18413\n",
+       "...                    ...                            ...\n",
+       "1690  16073255054457636768   16757 18534 7351 17966 13378\n",
+       "1691  18217982949448186449   18534 17966 7347 17756 13378\n",
+       "1692   8493046014808115881   18652 18413 18520 9311 18807\n",
+       "1693   6524731807859816855   18520 18413 18652 9311 18153\n",
+       "1694  17611799088817908833    18534 7347 10584 17966 7351\n",
+       "\n",
+       "[1695 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# common in top 10 from als_2, item2item, light_fm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#preds = read_pickle('../data/processed/light_fm.pickle')\n",
+    "als = read_pickle('../data/processed/als_2_10.pickle')\n",
+    "ite2item = read_pickle('../data/processed/item_simil_10.pickle')\n",
+    "light_fm = read_pickle('../data/processed/light_fm_new_idbm_10.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7347, 7351, 18080]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x[0] for x in pred if x[1] >= 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict = sbmt.copy()\n",
+    "predict = predict.drop(' movie_id', 1)\n",
+    "\n",
+    "for ind, user in enumerate(sbmt.iterrows()):\n",
+    "    user = user[1]['user_id']\n",
+    "    \n",
+    "    #pred = Counter(als[user] + ite2item[user] + light_fm[user]).most_common(5)\n",
+    "    pred = Counter(als[user] + light_fm[user]).most_common(5)\n",
+    "    pred = [x[0] for x in pred if x[1] >= 2]\n",
+    "    \n",
+    "    if len(pred) < 5:\n",
+    "        additional = 5 - len(pred)\n",
+    "        light_fm_pred = light_fm[user][:additional]\n",
+    "\n",
+    "        pred += light_fm_pred\n",
+    "    \n",
+    "    pred = ' '.join([str(i) for i in pred])\n",
+    "    \n",
+    "    predict.loc[ind, 'movie_id'] = pred\n",
+    "    \n",
+    "predict.to_csv('../data/submits/ensemble_als_lightfm.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2_lvl baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('../data/processed/random_5_from_top100.pickle', 'rb') as f:\n",
+    "    random_preds = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "random\n",
+      "random\n",
+      "random\n",
+      "random\n",
+      "random\n",
+      "random\n",
+      "random\n",
+      "random\n",
+      "random\n",
+      "random\n",
+      "random\n",
+      "random\n",
+      "random\n",
+      "random\n",
+      "random\n"
+     ]
+    }
+   ],
+   "source": [
+    "#preds = read_pickle('../data/processed/2_lvl_30000.pickle')\n",
+    "preds = read_pickle('../data/processed/2_lvl_xgbm.pickle')\n",
+    "\n",
+    "predict = sbmt.copy()\n",
+    "predict = predict.drop(' movie_id', 1)\n",
+    "\n",
+    "for ind, user in enumerate(sbmt.iterrows()):\n",
+    "    #print(user[1]['user_id'])\n",
+    "    user = user[1]['user_id']\n",
+    "    \n",
+    "    if preds.get(user):\n",
+    "        #pred = ' '.join([str(i) for i in preds[user]])\n",
+    "        pred = preds[user]\n",
+    "    elif user_top_5_serials.get(user):\n",
+    "        print('top_5')\n",
+    "        if len(user_top_5_serials[user]) < 5:\n",
+    "            additional = len(user_top_5_serials[user]) - 5\n",
+    "            addit = random_preds[user][:additional]\n",
+    "            \n",
+    "            pred = user_top_5_serials[user] + addit\n",
+    "    else:\n",
+    "        print('random')\n",
+    "        pred = random_preds[user][:5]\n",
+    "\n",
+    "    pred = ' '.join([str(i) for i in pred])\n",
+    "    \n",
+    "    predict.loc[ind, 'movie_id'] = pred\n",
+    "    \n",
+    "predict.to_csv('../data/submits/2_lvl_xgbm.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>movie_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16975709365084587137</td>\n",
+       "      <td>19252 16693 16032 10447 17550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10225505309438393880</td>\n",
+       "      <td>19252 2973 10337 2164 2165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>337894458057354820</td>\n",
+       "      <td>17261 10920 9335 19207 16032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16389753737490268206</td>\n",
+       "      <td>17261 16693 2973 10920 19252</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12377183607123393787</td>\n",
+       "      <td>10920 19383 19207 17041 9408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1690</th>\n",
+       "      <td>16073255054457636768</td>\n",
+       "      <td>19353 15679 16601 17261 5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1691</th>\n",
+       "      <td>18217982949448186449</td>\n",
+       "      <td>10920 5 19207 18576 9256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1692</th>\n",
+       "      <td>8493046014808115881</td>\n",
+       "      <td>17261 10920 9335 9221 2973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1693</th>\n",
+       "      <td>6524731807859816855</td>\n",
+       "      <td>17261 9335 10920 19207 17041</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1694</th>\n",
+       "      <td>17611799088817908833</td>\n",
+       "      <td>19207 19252 16734 10920 16032</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1695 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   user_id                       movie_id\n",
+       "0     16975709365084587137  19252 16693 16032 10447 17550\n",
+       "1     10225505309438393880     19252 2973 10337 2164 2165\n",
+       "2       337894458057354820   17261 10920 9335 19207 16032\n",
+       "3     16389753737490268206   17261 16693 2973 10920 19252\n",
+       "4     12377183607123393787   10920 19383 19207 17041 9408\n",
+       "...                    ...                            ...\n",
+       "1690  16073255054457636768      19353 15679 16601 17261 5\n",
+       "1691  18217982949448186449       10920 5 19207 18576 9256\n",
+       "1692   8493046014808115881     17261 10920 9335 9221 2973\n",
+       "1693   6524731807859816855   17261 9335 10920 19207 17041\n",
+       "1694  17611799088817908833  19207 19252 16734 10920 16032\n",
+       "\n",
+       "[1695 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict"
    ]
   },
   {
