--- a/notebooks/lightFM.ipynb
+++ b/notebooks/lightFM.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,16 +276,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<lightfm.lightfm.LightFM at 0x111aa7b50>"
+       "<lightfm.lightfm.LightFM at 0x10f4d1a10>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,12 +314,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "recoms = {}\n",
-    "num_to_recom = 5\n",
+    "num_to_recom = 10\n",
     "for user in users_to_predict:\n",
     "    #print(user)\n",
     "    items_to_score = list(items_to_predict.difference(user_hist[user]))\n",
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,17 +342,24 @@
     "PATH = '/Users/danil/Documents/github/sweet_RS/'\n",
     "sys.path.append(str(PATH))\n",
     "\n",
-    "from src.utils import save_to_pickle"
+    "from src.utils import save_to_pickle, read_pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_to_pickle(recoms, '../data/processed/light_fm_new_idbm.pickle')"
+    "save_to_pickle(recoms, '../data/processed/light_fm_new_idbm_10.pickle')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1350,15 +1357,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "item_features = pd.concat([item_features, res], 1).drop('genres', 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "item_features = pd.concat([item_features, res], 1).drop('genres', 1)\n",
+    "\n",
     "item_features = item_features.fillna(item_features.mean())"
    ]
   },
@@ -1432,6 +1432,46 @@
    ],
    "source": [
     "movie_features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "515883.4"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "258055.07 + 94677.83 + 83073.90 + 80076.60"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "515883.4"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "257828.33 + 258055.07\n"
    ]
   },
   {
